[package]
name = "snowball"
version = "0.0.5"
author = "JumpingPistachio"
about = "A simple CLI ssh runner / manager."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
